--- a/VvvSample/VvvSample.csproj
+++ b/VvvSample/VvvSample.csproj
@@ -46,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContextMenu.cs" />
     <Compile Include="InfoTip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VvvFile.cs" />
+    <Compile Include="VvvRootKey.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MiniShellFramework\MiniShellFramework.csproj">
