--- a/VvvSample/VvvSample.csproj
+++ b/VvvSample/VvvSample.csproj
@@ -40,6 +40,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CopyHook.cs" />
+    <Compile Include="FolderCopyHook.cs" />
     <Compile Include="ContextMenu.cs" />
     <Compile Include="InfoTip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
