--- a/VvvSampleTest/VvvSampleTest.csproj
+++ b/VvvSampleTest/VvvSampleTest.csproj
@@ -39,16 +39,19 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FolderCopyHookTest.cs" />
     <Compile Include="InfoTipTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,9 +60,14 @@
       <Project>{06EBF505-2594-4CCF-889E-CEE8C4715629}</Project>
       <Name>MiniShellFramework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VvvSample\VvvSample.csproj">
+      <Project>{8611B960-278E-45A7-82B6-45B03E14B4F0}</Project>
+      <Name>VvvSample</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Test References\" />
+    <Shadow Include="Test References\VvvSample.accessor" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
