--- a/MiniShellFramework/MiniShellFramework.csproj
+++ b/MiniShellFramework/MiniShellFramework.csproj
@@ -118,7 +118,7 @@
     <Compile Include="ComTypes\IQueryInfo.cs" />
     <Compile Include="MeasureItemStruct.cs" />
     <Compile Include="Menu.cs" />
-    <Compile Include="MenuItemInfo.cs" />
+    <Compile Include="ComTypes\MenuItemInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmallBitmapCustomMenuHandler.cs" />
   </ItemGroup>
