Initial support for IShellPropSheetExt extensions + 2 class diagram overviews.

--- a/VvvSample/VvvSample.csproj
+++ b/VvvSample/VvvSample.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ContextMenu.cs" />
     <Compile Include="InfoTip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellPropertySheet.cs" />
     <Compile Include="VvvFile.cs" />
     <Compile Include="VvvRootKey.cs" />
   </ItemGroup>
