--- a/MiniShellFramework/MiniShellFramework.csproj
+++ b/MiniShellFramework/MiniShellFramework.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="ComTypes\IContextMenu.cs" />
     <Compile Include="ComTypes\IContextMenu2.cs" />
+    <Compile Include="ComTypes\IShellPropSheetExt.cs" />
     <Compile Include="ComTypes\QueryContextMenuOptions.cs" />
     <Compile Include="Facility.cs" />
     <Compile Include="RootKey.cs" />
@@ -122,9 +123,13 @@
     <Compile Include="Menu.cs" />
     <Compile Include="ComTypes\MenuItemInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellExtensionInit.cs" />
+    <Compile Include="ShellPropertySheetBase.cs" />
     <Compile Include="SmallBitmapCustomMenuHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Class Diagrams\Base Classes.cd" />
+    <None Include="Class Diagrams\Interfaces.cd" />
     <None Include="KeyPair.snk" />
   </ItemGroup>
   <ItemGroup />
