--- a/MiniShellFramework/MiniShellFramework.csproj
+++ b/MiniShellFramework/MiniShellFramework.csproj
@@ -103,6 +103,7 @@
     <Compile Include="ComTypes\IShellPropSheetExt.cs" />
     <Compile Include="ComTypes\MenuItemInfoMask.cs" />
     <Compile Include="ComTypes\MenuItemInfoType.cs" />
+    <Compile Include="ComTypes\PropSheetPage.cs" />
     <Compile Include="ComTypes\QueryContextMenuOptions.cs" />
     <Compile Include="ComTypes\ShellExtInitContract.cs" />
     <Compile Include="Facility.cs" />
