--- a/VvvSample/VvvSample.csproj
+++ b/VvvSample/VvvSample.csproj
@@ -94,6 +94,7 @@
     <Compile Include="InfoTip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellPropertySheet.cs" />
+    <Compile Include="ThumbnailProvider.cs" />
     <Compile Include="VvvFile.cs" />
     <Compile Include="VvvRootKey.cs" />
   </ItemGroup>
